# app/validators/refresh_token.ts
@@ -1,0 +1,7 @@
+import vine from '@vinejs/vine'
+
+export const refreshTokenValidator = vine.compile(
+  vine.object({
+    refreshToken: vine.string(),
+  })
+)
